# glimpse

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  Camera.py  DEM.py  Image.py  Makefile  README.md  dem.py  helper.py  image.py  noxfile.py  observer.py  optimize.py  particle_tracker_two_cam.py  pyproject.toml  ransac.py  requirements.txt  run_doctests.py  setup.py  svg.py  symbolic.py  test_drive.py  test_matcher.py  tests.py  tracker.py
.github/workflows/: tests.yml
cg/: .gitignore  README.md  bed.tif  build_horizons.py  build_motion_matches.py  build_observers.py  build_reference_velocity.py  build_synth_images.py  build_synth_matches.py  build_track_points.py  build_viewdirs.py  calibrate_cameras.py  calibrate_images.py  calibrate_stations.py  cg.py  compute_derived_cameras.py  convert_cameras.py  copy_points_to_external.py  dem_interpolation.py  egm2008.tif  elevate_control.py  merge_tracks.py  motion.json  observers.json  orient_images.py  process_tracks.py  sequences.csv  simulate_images.py  temp.py  track_benchmarks.py  track_points.py
cg-calibrations/: .gitignore  build_horizons.py  build_moraines.py  calibrate_cameras.py  calibrate_images.py  calibrate_stations.py  cg.py  cgcalib.py  compute_derived_cameras.py  convert_cameras.py  egm2008.tif  elevate_control.py  motion.json  sequences.csv
cg-calibrations/cameras/: canon-20d.json  canon-40d-01-calib_stderr.json  canon-40d-01.json  nikon-d200-03-20.json  nikon-d200-03-20_stderr.json  nikon-d200-08-24.json  nikon-d200-08-24_stderr.json  nikon-d200-10-24_stderr.json  nikon-d200-11-28_stderr.json  nikon-d200-13-20.json  nikon-d200-14-20_stderr.json  nikon-d2x.json  nikon-d300s.json  nikon-d300s_stderr.json  nikon-e8700-calib.json  nikon-e8700-calib_stderr.json  nikon-e8700.json  nikon-e8700_stderr.json
cg-calibrations/geojson/: coast.geojson  gcp.geojson  stations.geojson  termini.geojson
cg-calibrations/images/: AK01b_20080811_193452.json  AK01b_20080922_193508.json  AK01b_20090319_213755.json  AK01b_20090827_202939.json  AK01b_20100509_200138.json  AK01b_20100525_200710.json  AK01b_20100602_200707.json  AK01b_20100915_200427.json  AK01b_20110711_195216.json  AK01b_20130609_184325.json  AK01b_20130615_220325.json  AK01b_20131106_192014.json  AK03_20080208_205507.json  AK03_20080608_181855.json  AK03b_20080811_191645.json  AK04_20070610_180021.json  AK04_20070619_180030.json  AK09_20090516_200409.json  AK09_20090803_200320.json  AK09b_20090827_200153.json  AK09b_20100525_200819.json  AK09b_20100602_200818.json  AK10_20090803_195410.json  AK10b_20121012_160709.json  AK10b_20130615_013704.json  AKJNC_20120605_223513.json  AKJNC_20120813_223326-calib.json  AKJNC_20121001_155719-calib.json  AKST03A_20100525_224800.json  AKST03B_20100602_224800.json  CG04_20040625_200016-calib.json  CG04_20040625_200016.json  CG04_20041009_200016.json  CG05_20050811_130000.json  CG05_20050811_190000.json  CG05_20050822_130000.json  CG05_20050827_190000.json  CG06_20060627_195956.json  CG06_20060712_195953.json  CG06_20060913_215944.json
cg-calibrations/stations/: AK01b.json  AK01b_stderr.json  AK03.json  AK03b.json  AK03b_stderr.json  AK04_stderr.json  AK09.json  AK09b.json  AK10.json  AK12.json  AKJNC.json  AKST03A_stderr.json  AKST03B.json  AKST03B_stderr.json  CG04-calib_stderr.json  CG05.json  CG06_stderr.json
cg/cameras/: canon-20d.json  canon-20d_stderr.json  canon-40d-01-calib.json  canon-40d-01-calib_stderr.json  canon-40d-01.json  canon-40d-01_stderr.json  nikon-d200-03-20.json  nikon-d200-03-20_stderr.json  nikon-d200-04-24.json  nikon-d200-04-24_stderr.json  nikon-d200-04-35.json  nikon-d200-04-35_stderr.json  nikon-d200-08-24.json  nikon-d200-08-24_stderr.json  nikon-d200-10-24.json  nikon-d200-10-24_stderr.json  nikon-d200-11-28-calib.json  nikon-d200-11-28-calib_stderr.json  nikon-d200-11-28.json  nikon-d200-11-28_stderr.json  nikon-d200-12-28-calib.json  nikon-d200-12-28-calib_stderr.json  nikon-d200-12-28.json  nikon-d200-12-28_stderr.json  nikon-d200-13-20.json  nikon-d200-13-20_stderr.json  nikon-d200-14-20.json  nikon-d200-14-20_stderr.json  nikon-d200-17-20.json  nikon-d200-17-20_stderr.json  nikon-d200-18-20.json  nikon-d200-18-20_stderr.json  nikon-d2x-a-calib_stderr.json  nikon-d2x-b-calib.json  nikon-d2x-b-calib_stderr.json  nikon-d2x-calib.json  nikon-d2x.json  nikon-d2x_stderr.json  nikon-d300s.json  nikon-d300s_stderr.json  (+4 more)
cg/geojson/: centerline.geojson  (+6 more)
docs/: api.rst  conf.py  index.rst
glimpse/: __init__.py  backports.py  camera.py  config.py  convert.py  dem.py  exif.py  geojson.py  helpers.py  image.py  imports.py  observer.py  optimize.py  parallel.py  raster.py  svg.py  tracker.py  unumpy.py
python/: Camera.py
tests/: 000nan.tif  11-1nan.tif  Calib_Results.m  CalibrationReport.txt  __init__.py  agisoft.xml  context.py  opencv.xml  test_camera.py  test_convert.py  test_dem.py  test_exif.py  test_image.py  test_optimize.py  test_raster.py  test_svg.py  test_unumpy.py
(+33168 files in other folders)
