[tool.poetry]
name = "glimpse"
version = "0.1.0b1"
description = "Timelapse camera calibration and surface motion extraction"
authors = ["Ethan Welty <ethan.welty@gmail.com>", "Douglas Brinkerhoff"]
readme = "README.md"
homepage = "hhttps://github.com/ezwelty/glimpse"
repository = "https://github.com/ezwelty/glimpse"
keywords = ["glaciology", "timelapse", "photogrammetry", "camera calibration", "feature tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Image Recognition"
]

[tool.poetry.dependencies]
python = "^3.6.1, <= 3.7.7"
numpy = "^1.18.5"
lmfit = "^1.0.1"
pandas = "^1.0.4"
piexif = "^1.1.3"
progress = "^1.5"
sharedmem = "^0.3.7"
Pillow = "^7.1.2"
matplotlib = "^3.2.1"
scikit-learn = "^0.23.1"
shapely = "^1.7.0"
pyproj = "^2.6.1"
GDAL = "2.4.4"
opencv-contrib-python-nonfree = "^4.1.1"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
sphinx = "^3.1.0"
sphinx-rtd-theme = "^0.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-import-order = "^0.18.1"
flake8-black = "^0.2.0"
uncertainties = "^3.1.4"
flake8-annotations = "^2.1.0"
mypy = "^0.780"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
typeguard = "^2.9.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.1"

[tool.coverage.paths]
source = ["glimpse"]

[tool.coverage.run]
branch = true
source = ["glimpse"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
