[tool.poetry]
name = "glimpse"
version = "0.1.0b1"
description = "Timelapse camera calibration and surface motion extraction"
authors = ["Ethan Welty <ethan.welty@gmail.com>", "Douglas Brinkerhoff"]
readme = "README.md"
homepage = "https://github.com/ezwelty/glimpse"
repository = "https://github.com/ezwelty/glimpse"
keywords = ["glaciology", "timelapse", "photogrammetry", "camera calibration", "feature tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Image Recognition"
]
packages = [{ include = "glimpse", from = "src" }]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.5"
lmfit = "^1.0.1"
piexif = "^1.1.3"
progress = "^1.5"
sharedmem = "^0.3.7"
matplotlib = "^3.2.1"
GDAL = "3.1.2"
typing_extensions = "^3.7.4"
scipy = "^1.4.1"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
sphinx = "^3.1.0"
sphinx-rtd-theme = "^0.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-import-order = "^0.18.1"
flake8-black = "^0.2.0"
flake8-annotations = "^2.1.0"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
flake8-docstrings = "^1.5.0"
nox = "^2020.8.22"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["glimpse"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
